--- a/readme.org
+++ b/readme.org
@@ -1,12 +1,10 @@
 #+title: cl-ris
 #+author: Ruben Philipp
 
-This is a simple Common Lisp parsing library for the [[https://en.wikipedia.org/wiki/RIS_(file_format)][RIS]] file format[fn:1], a simple
-format widely used for the exchange of citation data.
+This is a simple Common Lisp parsing library for the [[https://en.wikipedia.org/wiki/RIS_(file_format)][RIS]] file format[fn:1], a
+simple format widely used for the exchange of citation data.
 
 * Usage
-
-TODO
 
 ** Dependencies
 
